Change to test gem in Travis using Rails 5 and 6

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,6 @@ cache: bundler
 bundler_args: --retry=6
 notifications:
   email: false
+env:
+  - "RAILS_VERSION=5.2.4.3"
+  - "RAILS_VERSION=6.0.3"
