--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,6 +11,11 @@ jobs:
   tests:
     timeout-minutes: 30
     runs-on: ubuntu-18.04
+    strategy:
+      matrix:
+        rails_version:
+          - 5.2.4.3
+          - 6.0.3
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-ruby@v1
@@ -19,10 +24,11 @@ jobs:
       - uses: actions/cache@v2
         with:
           path: vendor/bundle
-          key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-gems-
+          key: ${{ runner.os }}-gems-${{ matrix.rails_version }}-${{ hashFiles('**/Gemfile.lock') }}
+          restore-keys: ${{ runner.os }}-gems-${{ matrix.rails_version }}-
       - name: Setup
+        env:
+          RAILS_VERSION: ${{ matrix.rails_version }}
         run: |
           bundle install
           bundle exec rake --trace db:create db:schema:load db:seed
