--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,14 +21,8 @@ jobs:
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: 2.7
-      - uses: actions/cache@v2
-        with:
-          path: vendor/bundle
-          key: ${{ runner.os }}-gems-${{ matrix.rails_version }}-${{ hashFiles('**/Gemfile.lock') }}
-          restore-keys: ${{ runner.os }}-gems-${{ matrix.rails_version }}-
-      - name: Setup
+          bundler-cache: true
         env:
           RAILS_VERSION: ${{ matrix.rails_version }}
-        run: bundle install
       - name: Test
         run: bundle exec rake spec
